added audits and Log Of The World (LOTW) report update of logs

--- a/config.yaml
+++ b/config.yaml
@@ -2,3 +2,4 @@
   dsn: "web:%s@/stationmaster?parseTime=true"
   configfile: "$STATIONMASTER/config.yaml"
   adiffile: "adif.txt"
+  qsldir: "$HOME/Documents/hamradio/lotwqsl"
