--- a/config.yaml
+++ b/config.yaml
@@ -3,3 +3,4 @@
   configfile: "$STATIONMASTER/config.yaml"
   adiffile: "adif.txt"
   qsldir: "$HOME/Documents/hamradio/lotwqsl"
+  contestdir: "$HOME/Documents/hamradio/contest"
